modified:   cms_test/settings.py 	modified:   cms_test/templates/base.html 	modified:   cms_test/templates/template_1.html 	modified:   cms_test/templates/template_2.html 	modified:   cms_test/urls.py 	modified:   cms_test/wsgi.py 	modified:   manage.py 	deleted:    templates/base.html 	deleted:    templates/template_1.html 	deleted:    templates/template_2.html 	modified:   wsgi_app.py

--- a/cms_test/templates/base.html
+++ b/cms_test/templates/base.html
@@ -4,9 +4,8 @@
   <head>
       {% render_block "css" %}
   </head>
-  <body>
+  <body style="margin:0px"> 
       {% cms_toolbar %}
-      {% placeholder base_content %}
       {% block base_content %}{% endblock %}
       {% render_block "js" %}
   </body>
