--- a/cms_test/templates/template_1.html
+++ b/cms_test/templates/template_1.html
@@ -2,5 +2,6 @@
 {% load cms_tags %}
  
 {% block base_content %}
-  {% placeholder template_1_content %}
+  {% placeholder Products %}
+  {% placeholder Page_Describe %}
 {% endblock %}
